--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -11,7 +11,7 @@ permissions:
 jobs:
   golangci:
     name: golangci-lint
-    runs-on: self-hosted
+    runs-on: [self-hosted, 5000-iops]
     steps:
       - name: Checkout
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # pin@v6.0.1
